--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,6 +17,9 @@
     "url": "https://github.com/Ashlyn708/CommunityGarden/issues"
   },
   "homepage": "https://github.com/Ashlyn708/CommunityGarden#readme",
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
