--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "googleapis": "^39.2.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.17"
   }
