--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
+    "mongoose": "^5.12.3",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.17"
   }
