--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "googleapis": "^39.2.0",
     "mongoose": "^5.12.3",
     "node-fetch": "^2.6.1",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "sendmail": "^1.6.1"
   }
 }
